Fix horizontal scrollbars - Fixes 202
Fixes https://github.com/maithemewp/mai-engine/issues/202

--- a/assets/scss/abstracts/_extends.scss
+++ b/assets/scss/abstracts/_extends.scss
@@ -9,6 +9,7 @@
 	font-family: var(--body-font-family); // No fallback, always output by Kirki.
 	line-height: var(--body-line-height, 1.625); // Perfect fourth.
 	background: var(--body-background-color, var(--color-background));
+	overflow-x: hidden; // Prevent horizontal scrollbars.
 }
 
 @mixin heading {
