--- a/assets/scss/base/_html.scss
+++ b/assets/scss/base/_html.scss
@@ -1,6 +1,8 @@
 html {
 	max-width: 100vw;
 	font-size: 100%; // 16px browser default.
+	overflow-x: hidden; // Prevent horizontal scrollbars.
+
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 
